# FACEGOOD-Audio2Face

20230926/: api_tensorflow.py  input_lpc_output_weight.py  main.py  toarkit.py
20230926/libLPC/: CMakeLists.txt
20230926/libLPC/src/: LPC.cpp  LPC.h  lpcfunc.h
